@@ -5,10 +5,12 @@ RUN set -eux; \
 	apt-get update;
 
 COPY structurizr-application/target/structurizr-*.war /usr/local/structurizr.war
+COPY structurizr-mcp/target/structurizr-*.war /usr/local/structurizr-mcp.war
 COPY structurizr-themes /usr/local/structurizr-themes
+COPY entrypoint.sh /usr/local/structurizr/entrypoint.sh
 
 EXPOSE ${PORT}
 
 WORKDIR /usr/local/structurizr
 
-ENTRYPOINT ["java", "-Dserver.port=${PORT}", "-jar", "--enable-native-access=ALL-UNNAMED", "/usr/local/structurizr.war"]
+ENTRYPOINT ["/usr/local/structurizr/entrypoint.sh"]
